--- a/.cargo/config
+++ b/.cargo/config
@@ -1,5 +1,7 @@
+[target.thumbv7m-none-eabi]
+
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
-runner = "arm-none-eabi-gdb -q -x openocd.gdb"
+runner = "probe-run --chip STM32F407VGTx"
 
 rustflags = [
   "-C", "link-arg=-Tlink.x",
